--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Version history for Class::Discover
 
+1.000001 - 17 Aug 2009
+  - Fixed Random-Order test failure ( RT#48571 , KENTNL )
+
 1.000000 - 18 Jul 2009
   - Initial version of code split out from Module::Install::ProvidesClass
