Import of ASH/Class-Discover-1.000003 from CPAN.
gitpan-cpan-distribution: Class-Discover
gitpan-cpan-version:      1.000003
gitpan-cpan-path:         ASH/Class-Discover-1.000003.tar.gz
gitpan-cpan-author:       ASH
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -46,7 +46,7 @@ SEE ALSO
 
     Module::Install::ProvidesClass
 
-    DistZilla
+    Dist::Zilla
 
 AUTHOR
     Ash Berlin "<ash@cpan.org>". (C) 2009. All rights reserved.
