--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Version history for Class::Discover
 
+1.000003 - 15 Jun 2010
+  - Re-building tarball without BSD tar extensions. No code changes.
+
 1.000002 - 02 Jun 2010
   - Fix test failures on Win32 due to differences in paths format ('/' vs '\')
     ( RT#56996, Christian Walde )
